logs/dag_id=save_city_info_weather_v01/run_id=manual__2024-09-14T20:14:33.494836+00:00/task_id=insert_data/attempt=5.log
[2024-09-14T20:34:45.304+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: save_city_info_weather_v01.insert_data manual__2024-09-14T20:14:33.494836+00:00 [queued]>
[2024-09-14T20:34:45.318+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: save_city_info_weather_v01.insert_data manual__2024-09-14T20:14:33.494836+00:00 [queued]>
[2024-09-14T20:34:45.319+0000] {taskinstance.py:1283} INFO - 
--------------------------------------------------------------------------------
[2024-09-14T20:34:45.319+0000] {taskinstance.py:1284} INFO - Starting attempt 5 of 6
[2024-09-14T20:34:45.319+0000] {taskinstance.py:1285} INFO - 
--------------------------------------------------------------------------------
[2024-09-14T20:34:45.329+0000] {taskinstance.py:1304} INFO - Executing <Task(PostgresOperator): insert_data> on 2024-09-14 20:14:33.494836+00:00
[2024-09-14T20:34:45.345+0000] {standard_task_runner.py:55} INFO - Started process 15244 to run task
[2024-09-14T20:34:45.349+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'save_city_info_weather_v01', 'insert_data', 'manual__2024-09-14T20:14:33.494836+00:00', '--job-id', '246', '--raw', '--subdir', 'DAGS_FOLDER/saver_info.py', '--cfg-path', '/tmp/tmpwjimc4sc']
[2024-09-14T20:34:45.350+0000] {standard_task_runner.py:83} INFO - Job 246: Subtask insert_data
[2024-09-14T20:34:45.422+0000] {task_command.py:389} INFO - Running <TaskInstance: save_city_info_weather_v01.insert_data manual__2024-09-14T20:14:33.494836+00:00 [running]> on host 0c5fe11d0c9c
[2024-09-14T20:34:45.477+0000] {taskinstance.py:1513} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=me
AIRFLOW_CTX_DAG_ID=save_city_info_weather_v01
AIRFLOW_CTX_TASK_ID=insert_data
AIRFLOW_CTX_EXECUTION_DATE=2024-09-14T20:14:33.494836+00:00
AIRFLOW_CTX_TRY_NUMBER=5
AIRFLOW_CTX_DAG_RUN_ID=manual__2024-09-14T20:14:33.494836+00:00
[2024-09-14T20:34:45.479+0000] {sql.py:253} INFO - Executing: insert into weathers (id, city_name, max_temp, min_temp, wind, description) values (2, '%(name)s', '%(max_temp)s', '$(min_temp)s', '%(wind)s', '%(description)s')
[2024-09-14T20:34:45.487+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-09-14T20:34:45.677+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-09-14T20:34:45.698+0000] {sql.py:364} INFO - Running statement: insert into weathers (id, city_name, max_temp, min_temp, wind, description) values (2, '%(name)s', '%(max_temp)s', '$(min_temp)s', '%(wind)s', '%(description)s'), parameters: {'name': '{{ti.xcom_pull(task_ids="fetcher_data", key="return_value")["name"]}}', 'max_temp': '{{ti.xcom_pull(task_ids="fetcher_data", key="return_value")["max_temp"]}}', 'min_temp': '{{ti.xcom_pull(task_ids="fetcher_data", key="return_value")["min_temp"]}}', 'wind': '{{ti.xcom_pull(task_ids="fetcher_data", key="return_value")["wind"]}}', 'description': '{{ti.xcom_pull(task_ids="fetcher_data", key="return_value")["description"]}}'}
[2024-09-14T20:34:45.699+0000] {taskinstance.py:1772} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 261, in execute
    return_last=self.return_last,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 338, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 367, in _run_command
    cur.execute(sql_statement, parameters)
psycopg2.errors.SyntaxError: syntax error at or near "{"
LINE 1: ...x_temp, min_temp, wind, description) values (2, ''{{ti.xcom_...
                                                             ^

[2024-09-14T20:34:45.706+0000] {taskinstance.py:1327} INFO - Marking task as UP_FOR_RETRY. dag_id=save_city_info_weather_v01, task_id=insert_data, execution_date=20240914T201433, start_date=20240914T203445, end_date=20240914T203445
[2024-09-14T20:34:45.713+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 246 for task insert_data (syntax error at or near "{"
LINE 1: ...x_temp, min_temp, wind, description) values (2, ''{{ti.xcom_...
                                                             ^
; 15244)
[2024-09-14T20:34:45.735+0000] {local_task_job.py:159} INFO - Task exited with return code 1
[2024-09-14T20:34:45.747+0000] {taskinstance.py:2582} INFO - 0 downstream tasks scheduled from follow-on schedule check
